tests/golden/type_errors/lambda_return_type_mismatch.cd
let bad = fun (): bool {
  return 1;
};
